2010-08-27  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* whitespace.el (whitespace-style): Adjust type declaration.

2010-08-26  Nathan Weizenbaum  <nweiz@cressida.sea.corp.google.com>  (tiny change)

	* progmodes/js.el: Make indentation more customizable (Bug#6914).
	(js-paren-indent-offset, js-square-indent-offset)
	(js-curly-indent-offset): New options.
	(js--proper-indentation): Use them.

2010-08-26  Daniel Colascione  <dan.colascione@gmail.com>

	* progmodes/sh-script.el (sh-get-indent-info): Use syntax-ppss
	instead of inspecting font-lock properties (Bug#6916).

2010-08-26  David Reitter  <david.reitter@gmail.com>

	* server.el (server-visit-files): Run pre-command-hook and
	post-command-hook for each buffer while it is current
	(Bug#6910).
	(server-execute): Do not run hooks here.

2010-08-26  Michael Albinus  <michael.albinus@gmx.de>

	Sync with Tramp 2.1.19.

	* net/trampver.el: Update release number.

2010-08-26  Chong Yidong  <cyd@stupidchicken.com>

	* help.el (help-map): Bind `C-h P' to describe-package.

	* menu-bar.el (menu-bar-describe-menu): Add describe-package.

	* emacs-lisp/package.el (package-refresh-contents): Catch errors
	when downloading archives.
	(describe-package-1): Add package commentary.
	(package-install-button-action): New function.
	(package-menu-mode-map): Bind ? to package-menu-describe-package.
	(package-menu-view-commentary): Function removed.
	(package-list-packages-internal): Hide the `package' package too.

2010-08-25  Kenichi Handa  <handa@m17n.org>

	* language/misc-lang.el ("Arabic"): New language environment.
	Setup composition-function-table for Arabic characters.

	* international/fontset.el (setup-default-fontset): Fix typo for
	arabic OTF spec (fini->fina).

2010-08-25  Jan Djärv  <jan.h.d@swipnet.se>

	* menu-bar.el (menu-bar-set-tool-bar-position): Set frame parameter
	on all frames.

2010-08-24  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* whitespace.el: Allow cleaning up blanks without blank